se modifican estilos y se elimina archivo no util

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         <link rel="apple-touch-icon-precomposed" href="//ssl.gstatic.com//meet/icons/logo_meet_2020q4_512dp_4ac4a724a69a35b5b08c6a711c9717c2.png" sizes="512x512">
         <link rel="msapplication-square512x512logo" href="//ssl.gstatic.com//meet/icons/logo_meet_2020q4_512dp_4ac4a724a69a35b5b08c6a711c9717c2.png" sizes="512x512">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+        <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
         <link rel="stylesheet" href="https://fonts.gstatic.com/s/googlesans/v14/4UabrENHsxJlGDuGo1OIlLU94YtzCwY.woff2"/>
         <link rel="stylesheet" href="https://fonts.gstatic.com/s/googlesans/v14/4UaGrENHsxJlGDuGo1OIlL3Owp4.woff2"/>
-        <link rel="stylesheet" href="https://fonts.gstatic.com/s/productsans/v9/pxiDypQkot1TnFhsFMOfGShVF9eO.woff2"/>
+        <link rel="stylesheet" href="https://fonts.gstatic.com/s/productsans/v9/pxiDypQkot1TnFhsFMOfGShVF9eO.woff2"/> -->
         <title>Google Meet Clone</title>
     </head>
     <body>
